--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,22 @@
 {
-    "name": "ivancarlosti/cryptodocker",
-    "description": "PHP BIP39/BTC/ETH Key Generator",
-    "require": {
-        "bitwasp/bitcoin": "^1.0",
-        "kornrunner/php-ethereum-address": "^0.2.0"
-    },
-    "config": {
-        "audit": {
-            "ignore": {
-                "PKSA-j43q-24zh-tyzv": true,
-                "PKSA-36gf-zqdd-tq5m": true
+    {
+        "name": "ivancarlosti/cryptodocker",
+        "description": "PHP BIP39/BTC/ETH Key Generator",
+        "require": {
+            "bitwasp/bitcoin": "^1.0",
+            "kornrunner/php-ethereum-address": "^0.2.0"
+        },
+        "config": {
+            "audit": {
+                "ignore": [
+                    "PKSA-j43q-24zh-tyzv",
+                    "PKSA-36gf-zqdd-tq5m"
+                ]
+            }
+        },
+        "autoload": {
+            "psr-4": {
+                "App\\": "src/"
             }
         }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
     }
-}
