--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,9 @@
     "name": "ivancarlosti/cryptodocker",
     "description": "PHP BIP39/BTC/ETH Key Generator",
     "require": {
-        "bitwasp/bitcoin": "^1.0",
-        "kornrunner/php-ethereum-address": "^0.2.0"
-    },
-    "config": {
-        "audit": {
-            "ignore": [
-                "PKSA-j43q-24zh-tyzv",
-                "PKSA-36gf-zqdd-tq5m"
-            ]
-        }
+        "furqansiddiqui/bip39-mnemonic-php": "^0.2.0",
+        "furqansiddiqui/bip32-keypair-php": "^0.4.0",
+        "kornrunner/ethereum-address": "^0.2.0"
     },
     "autoload": {
         "psr-4": {
